@@ -11,6 +11,8 @@ entire history of the project is available through SVN.
 --- 2007-11-XX  Release 7.11.0                                     ---
 ----------------------------------------------------------------------
 
+* fixed Mac OS X 'ogl' framebuffer crash - Sean Morrison, Bob Parker
+* removed ogl framebuffer multiple window 'm' option - Sean Morrison
 * tree -d option in MGED for limiting tree display depth - Cliff Yapp
 * added mouse color query support to OpenGL framebuffer - Bob Parker
 * fixed X11 framebuffer colormapping bug - Bob Parker 
